rendered/envs/newzoo/ingress/ingressclass-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    ingressclass.kubernetes.io/is-default-class: "true"
  labels:
    app.kubernetes.io/instance: traefik-ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-37.1.1
  name: traefik
spec:
  controller: traefik.io/ingress-controller
