rendered/envs/newzoo/ingress/service-traefik.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    external-dns.alpha.kubernetes.io/hostname: lb.budd.ee
    loadbalancer.openstack.org/keep-floatingip: "true"
    loadbalancer.openstack.org/proxy-protocol: v2
  labels:
    app.kubernetes.io/instance: traefik-ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-37.1.1
  name: traefik
  namespace: ingress
spec:
  externalIPs:
    - 130.61.220.225
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: web
    - name: websecure
      port: 443
      protocol: TCP
      targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik-ingress
    app.kubernetes.io/name: traefik
  type: NodePort
